@@ -9,7 +9,7 @@ Build-Depends: debhelper (>= 7)
 
 Package: wajig
 Architecture: all
-Depends: ${misc:Depends}, python3, apt, python3-apt, dselect, aptitude
+Depends: ${misc:Depends}, python3, apt, python3-apt, aptitude
 Suggests: wget, fping, debconf, reportbug, apt-move, dpkg-repack, alien, fakeroot, gkdebconf, apt-file, locales, deborphan, vrms, sudo, apt-show-versions, dctrl-tools, debsums, netselect-apt, dpkg-dev
 Description: simple and unified package management for Debian
  Wajig is a single commandline wrapper around apt, apt-cache, dpkg,
